# finops-pipeline

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
.notes/: progress.md
adr/001-domain-finops/: index.html
adr/002-storage-minio-delta/: index.html
adr/003-dag-structure/: index.html
adr/004-notebook-organization/: index.html
adr/005-gold-postgres/: index.html
airflow/: Dockerfile
architecture/: index.html
architecture/decisions/: index.html
architecture/dimensional-model/: index.html
architecture/domain-model/: index.html
architecture/medallion/: index.html
dags/: dag_finops_pipeline.py
docs/: domain-model.md  glossary.md  index.md  references.md
docs/adr/: 002-storage-minio-delta.md  004-notebook-organization.md  005-gold-postgres.md
docs/architecture/: dimensional-model.md  domain-model.md  index.md  medallion.md
docs/getting-started/: configuration.md  quickstart.md  requirements.md
docs/pipeline/: index.md
domain-model/: index.html
getting-started/configuration/: index.html
getting-started/quickstart/: index.html
getting-started/requirements/: index.html
glossary/: index.html
notebooks/bronze/: 01_bronze_teams.ipynb  02_bronze_budgets.ipynb  03_bronze_cost_entries.ipynb
notebooks/gold/: 01_gold_monthly_cost_by_team.ipynb  02_gold_top_resources.ipynb  04_gold_cost_by_environment.ipynb  (+2 more)
pipeline/: index.html
references/: index.html
scripts/: 01_schema.sql  02_seed.py
search/: search_index.json
spark/: Dockerfile
(+15 files in other folders)
