[project]
name = "finops-pipeline"
version = "0.1.0"
description = "Pipeline de dados com arquitetura medallion para FinOps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Spark + Delta Lake
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    # Banco de dados
    "psycopg2-binary>=2.9.9",
    # Notebooks
    "jupyterlab>=4.2.3",
    "papermill>=2.6.0",
    # Cloud / MinIO
    "boto3>=1.34.0",
    # Dados e seed
    "pandas>=2.2.0",
    "faker>=25.9.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.8.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.0",
    "ruff>=0.4.0",
]
